Migrated config repository